# SC4051-Design-and-Implementation-of-A-Distributed-Banking-System

./: .gitignore  README.md  extract_pdf.py  lab_manual.txt
client/: CMakeLists.txt  Makefile  action_output.txt  actions.txt  monitor_output.txt  test.sh
client/include/: INetworkTransport.h  Protocol.h  Service1_OpenAccountBoundary.h  Service1_OpenAccountControl.h  Service2_CloseAccountBoundary.h  Service2_CloseAccountControl.h  Service3_DepositWithdrawBoundary.h  Service3_DepositWithdrawControl.h  Service4_CheckBalanceBoundary.h  Service4_CheckBalanceControl.h  Service5_TransferBoundary.h  Service5_TransferControl.h  Service6_MonitorUpdatesBoundary.h  Service6_MonitorUpdatesControl.h  UdpTransport.h
client/src/: main.cpp
client/src/boundary/: Service1_OpenAccountBoundary.cpp  Service2_CloseAccountBoundary.cpp  Service3_DepositWithdrawBoundary.cpp  Service4_CheckBalanceBoundary.cpp  Service5_TransferBoundary.cpp  Service6_MonitorUpdatesBoundary.cpp
client/src/control/: Service1_OpenAccountControl.cpp  Service2_CloseAccountControl.cpp  Service3_DepositWithdrawControl.cpp  Service4_CheckBalanceControl.cpp  Service5_TransferControl.cpp  Service6_MonitorUpdatesControl.cpp
client/src/utils/: UdpTransport.cpp
server/: go.mod  main.go
server/api/: router.go  udp_server.go
server/biz/: CheckBalanceService.go  CloseAccountService.go  DepositWithdrawService.go  MonitorUpdatesService.go  OpenAccountService.go  TransferService.go  utils.go
server/common/: common.go
server/data/: repository.go
